@@ -283,10 +283,19 @@ bmdboot <- function(r, items = r$res$id, niter = 1000,
         }
         else
         {
-          lestimpar.4p <- list(b = lestimpar$b, d = lestimpar$d, e = lestimpar$e, f = lestimpar$f)
-          nlsboot <- suppressWarnings(try(nls(formula = formGauss4p, data = dsetboot, start = lestimpar.4p,
-                                              lower = c(0, -Inf, 0, -Inf), algorithm = "port"), 
-                                          silent = TRUE))
+          if (f1 == 0)
+          {
+            lestimpar.f0 <- list(b = lestimpar$b, c = lestimpar$c, d = lestimpar$d, e = lestimpar$e)
+            nlsboot <- suppressWarnings(try(nls(formula = formprobit, data = dsetboot, start = lestimpar.f0,
+                                                lower = c(0, -Inf, -Inf, 0), algorithm = "port"), 
+                                            silent = TRUE))
+          } else
+          {
+            lestimpar.4p <- list(b = lestimpar$b, d = lestimpar$d, e = lestimpar$e, f = lestimpar$f)
+            nlsboot <- suppressWarnings(try(nls(formula = formGauss4p, data = dsetboot, start = lestimpar.4p,
+                                                lower = c(0, -Inf, 0, -Inf), algorithm = "port"), 
+                                            silent = TRUE))
+          }
         }
         if(inherits(nlsboot, "nls"))
         {
@@ -305,19 +314,29 @@ bmdboot <- function(r, items = r$res$id, niter = 1000,
           deltapboot <- abs(y0boot) * xdiv100
           deltasdboot <- z * SDresboot
             
-          resBMDp <- calcBMD(y0=y0boot, delta=deltapboot, xext=xextrboot, yext=yextrboot, 
+          if (f1 != 0)
+          {
+            resBMDp <- calcBMD(y0=y0boot, delta=deltapboot, xext=xextrboot, yext=yextrboot, 
                                dosemin = dosemin, dosemax = dosemax, ydosemax = ydosemaxboot, 
-                             func = fGauss5pBMR, func_xinlog = fGauss5pBMR_xinlog,
+                               func = fGauss5pBMR, func_xinlog = fGauss5pBMR_xinlog,
                                b = bboot, c = cboot, d = dboot, e = eboot, g = fboot, 
-                             minBMD = minBMD, ratio2switchinlog = ratio2switchinlog)
-          BMDpboot <- resBMDp$BMD
+                               minBMD = minBMD, ratio2switchinlog = ratio2switchinlog)
+            BMDpboot <- resBMDp$BMD
             
-          resBMDsd <- calcBMD(y0=y0boot, delta=deltasdboot, xext=xextrboot, yext=yextrboot, 
+            resBMDsd <- calcBMD(y0=y0boot, delta=deltasdboot, xext=xextrboot, yext=yextrboot, 
                                 dosemin = dosemin, dosemax = dosemax, ydosemax = ydosemaxboot, 
-                              func = fGauss5pBMR, func_xinlog = fGauss5pBMR_xinlog,
+                                func = fGauss5pBMR, func_xinlog = fGauss5pBMR_xinlog,
                                 b = bboot, c = cboot, d = dboot, e = eboot, g = fboot, 
-                              minBMD = minBMD, ratio2switchinlog = ratio2switchinlog)
-          BMDsdboot <- resBMDsd$BMD
+                                minBMD = minBMD, ratio2switchinlog = ratio2switchinlog)
+            BMDsdboot <- resBMDsd$BMD
+          } else
+          {
+            ypboot <- y0boot * ( 1 + xdiv100*sign(cboot * dboot))
+            BMDpboot <- pmax(invprobit(ypboot, b= bboot, c = cboot, d = dboot, e = eboot), minBMD)
+            ysdboot <- y0boot + z*SDresboot * sign(cboot * dboot)
+            BMDsdboot <- pmax(invprobit(ysdboot, b= bboot, c = cboot, d = dboot, e = eboot), minBMD)
+          }
+          
           return(list(BMDp = BMDpboot, BMDsd = BMDsdboot))
         }
       } # end fboot
