@@ -169,7 +169,14 @@ bmdcalc <- function(f, z = 1, x = 10, minBMD, ratio2switchinlog = 100)
       dcalc$ysd[i] <- y0 + z*dfitall$SDres[i]*sign(c - d)
       dcalc$BMDsd[i] <- invLprobit(dcalc$ysd[i], b, c, d, e)
     } else
-    if(modeli == "Gauss-probit") {
+    if(modeli == "Gauss-probit" & g == 0) {
+      ydosemax <- dcalc$ydosemax[i] <- fGauss5p(x=dosemax, b=b, c=c, d=d, e=e, f=0)
+      dcalc$yp[i] <- y0 * ( 1 + xdiv100*sign(c - d))
+      dcalc$BMDp[i] <- invprobit(dcalc$yp[i], b, c, d, e)
+      dcalc$ysd[i] <- y0 + z*dfitall$SDres[i]*sign(c - d)
+      dcalc$BMDsd[i] <- invprobit(dcalc$ysd[i], b, c, d, e)
+    } else
+    if(modeli == "Gauss-probit" & g != 0) {
       yext <- dcalc$yextrem[i] <- fGauss5p(xext, b=b, c=c, d=d, e=e, f=g) # g is renamed f
       ydosemax <- dcalc$ydosemax[i] <- fGauss5p(x=dosemax, b=b, c=c, d=d, e=e, f=g)
       
